gitops/root/network/cilium-host-firewall.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: playbox-host-firewall
spec:
  description: Default-deny node ingress with cluster and DMZ management access
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
    - fromEntities:
        - cluster
    - fromCIDR:
        - 192.168.88.2/32
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - fromCIDR:
        - 192.168.88.0/24
      icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
